<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:paddingStart="@dimen/space_20"
    android:paddingTop="@dimen/space_0"
    android:paddingEnd="@dimen/space_20"
    android:paddingBottom="@dimen/space_24">

    <View
        android:id="@+id/viewFilterHandle"
        android:layout_width="@dimen/bottom_sheet_handle_width"
        android:layout_height="@dimen/bottom_sheet_handle_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/bottom_sheet_handle_margin_top"
        android:layout_marginBottom="@dimen/bottom_sheet_handle_margin_bottom"
        android:background="@drawable/bg_home_meta_pill" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_filter_title"
        android:textColor="@color/colorOnSurface"
        android:textSize="@dimen/text_size_subtitle"
        android:fontFamily="@font/manrope_semibold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_18"
        android:text="@string/search_filter_category"
        android:textColor="@color/colorOnSurface"
        android:textSize="@dimen/text_size_caption"
        android:fontFamily="@font/manrope_semibold" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupFilterCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        app:chipSpacingHorizontal="@dimen/space_8"
        app:chipSpacingVertical="@dimen/space_8"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipCategoryAll"
            style="@style/Ms.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_filter_all"
            app:chipBackgroundColor="@color/home_chip_bg" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipCategoryCraft"
            style="@style/Ms.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_category_craft" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipCategoryDecor"
            style="@style/Ms.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_category_decor" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipCategoryFood"
            style="@style/Ms.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_category_food" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipCategoryFashion"
            style="@style/Ms.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_category_fashion" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipCategoryBeauty"
            style="@style/Ms.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_category_beauty" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_18"
        android:text="@string/search_filter_price"
        android:textColor="@color/colorOnSurface"
        android:textSize="@dimen/text_size_caption"
        android:fontFamily="@font/manrope_semibold" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/sliderPriceRange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_6"
        android:valueFrom="0"
        android:valueTo="400" />

    <TextView
        android:id="@+id/tvPriceRangeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_4"
        android:textColor="@color/colorOnSurfaceVariant"
        android:textSize="@dimen/text_size_caption"
        android:fontFamily="@font/manrope_regular" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_18"
        android:text="@string/search_filter_location"
        android:textColor="@color/colorOnSurface"
        android:textSize="@dimen/text_size_caption"
        android:fontFamily="@font/manrope_semibold" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        app:chipSpacingHorizontal="@dimen/space_8"
        app:chipSpacingVertical="@dimen/space_8"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipLocationAny"
            style="@style/Ms.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_filter_all"
            app:chipBackgroundColor="@color/home_chip_bg" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipLocationMedina"
            style="@style/Ms.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_location_medina" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipLocationDjerba"
            style="@style/Ms.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_location_djerba" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipLocationKairouan"
            style="@style/Ms.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_location_kairouan" />
    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchBioNaturel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16"
        android:text="@string/search_filter_bio_naturel"
        android:textColor="@color/colorOnSurface"
        android:fontFamily="@font/manrope_regular" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_20"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFilterReset"
            style="@style/AppButton.Secondary"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_weight="1"
            android:text="@string/search_filter_reset" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFilterApply"
            style="@style/AppButton.Primary"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginStart="@dimen/space_10"
            android:layout_weight="1"
            android:text="@string/search_filter_apply" />
    </LinearLayout>
</LinearLayout>
