<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vendorProfileRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ms_surface_canvas"
    tools:context=".VendorShopProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/vendorProfileAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ms_surface_canvas"
        app:elevation="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/ms_top_bar_height"
            android:paddingStart="@dimen/space_8"
            android:paddingEnd="@dimen/space_20">

            <ImageView
                android:id="@+id/vendorProfileBack"
                android:layout_width="@dimen/ms_min_touch"
                android:layout_height="@dimen/ms_min_touch"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/ms_cd_back"
                android:padding="11dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/back"
                app:tint="@color/ms_text_primary" />

            <TextView
                style="@style/Ms.Text.Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_8"
                android:text="@string/vendor_profile_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/vendorProfileBack"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/vendorProfileScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingBottom="96dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/vendorProfileForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/space_20"
            android:paddingEnd="@dimen/space_20"
            android:paddingTop="@dimen/space_8">

            <!-- Branding -->
            <TextView
                style="@style/Ms.Text.SectionHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_12"
                android:text="@string/vendor_profile_section_branding" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_12"
                android:hint="@string/vendor_profile_field_shop_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vendorProfileShopName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_12"
                android:hint="@string/vendor_profile_field_shop_bio">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vendorProfileShopBio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:inputType="textMultiLine|textCapSentences"
                    android:maxLines="4"
                    android:minLines="2" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_12"
                android:hint="@string/vendor_profile_field_logo_url">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vendorProfileLogoUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textUri" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_12"
                android:hint="@string/vendor_profile_field_banner_url">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vendorProfileBannerUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textUri" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Delivery -->
            <TextView
                style="@style/Ms.Text.SectionHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_24"
                android:text="@string/vendor_profile_section_delivery" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_12"
                android:hint="@string/vendor_profile_field_shipping_fee">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vendorProfileShippingFee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_12"
                app:helperText="@string/vendor_profile_field_delivery_zones_hint"
                android:hint="@string/vendor_profile_field_delivery_zones">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vendorProfileZones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Hours -->
            <TextView
                style="@style/Ms.Text.SectionHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_24"
                android:text="@string/vendor_profile_section_hours" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_12"
                app:helperText="@string/vendor_profile_field_hours_hint"
                android:hint="@string/vendor_profile_field_hours">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vendorProfileHours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:inputType="textMultiLine|textCapSentences"
                    android:maxLines="3"
                    android:minLines="2" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Contact -->
            <TextView
                style="@style/Ms.Text.SectionHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_24"
                android:text="@string/vendor_profile_section_contact" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_12"
                android:hint="@string/vendor_profile_field_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vendorProfileEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_12"
                android:hint="@string/vendor_profile_field_phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vendorProfilePhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/vendorProfileSave"
                style="@style/Ms.Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_24"
                android:text="@string/vendor_profile_save" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/vendorProfileLoading"
        layout="@layout/ms_component_skeleton_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/space_20"
        android:visibility="gone" />

    <include
        android:id="@+id/vendorProfileError"
        layout="@layout/ms_component_error_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
